--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/common/common" as *;
+@use "../../styles/common/variables" as *;
 
 .navbar {
   @include flex_center;
@@ -11,6 +12,10 @@
     @include flex_center;
     width: 100%;
     justify-content: space-between;
+
+    @media screen and (max-width: $xxl) {
+      padding: 0 2rem;
+    }
 
     .header {
       font-size: 2rem;
