--- a/styles/common/_common.scss
+++ b/styles/common/_common.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 @mixin flex_center($direction: row) {
   display: flex;
   flex-direction: $direction;
@@ -6,6 +8,7 @@
 }
 
 @mixin container {
-  max-width: 1800px;
+  width: 100%;
+  max-width: $xxl;
   margin: 0 auto;
 }
