--- a/components/Products/ProductDetails.module.scss
+++ b/components/Products/ProductDetails.module.scss
@@ -13,7 +13,7 @@
       width: 100%;
       height: 100%;
       @include flex_center;
-      border: 3px solid blue;
+      // border: 3px solid blue;
       //   border-radius: 2rem;
 
       .img {
@@ -27,10 +27,27 @@
     .product_details {
       width: 100%;
       height: 100%;
-      border: 1px solid blue;
-      padding: 2rem;
+      // border: 1px solid blue;
+      padding-left: 1rem;
+      @include flex_center(column);
+      justify-content: space-between;
+
+      .header {
+        width: 100%;
+        height: 70%;
+        border: 1px solid black;
+        border-radius: 20px;
+        box-shadow: 1px 1px 10px;
+        padding: 20px;
+      }
 
       .checkout {
+        width: 100%;
+        border: 1px solid black;
+        border-radius: 20px;
+        box-shadow: 1px 1px 10px;
+        padding: 20px;
+        margin-top: 2rem;
       }
     }
   }
