--- a/components/Products/ProductDetails.module.scss
+++ b/components/Products/ProductDetails.module.scss
@@ -32,6 +32,11 @@
       @include flex_center(column);
       justify-content: space-between;
 
+      @media screen and (max-width: 1200px) {
+        padding-left: 0;
+        margin-top: 1rem;
+      }
+
       .header {
         width: 100%;
         height: 70%;
@@ -43,11 +48,28 @@
 
       .checkout {
         width: 100%;
+        // height: 30%;
         border: 1px solid black;
         border-radius: 20px;
         box-shadow: 1px 1px 10px;
         padding: 20px;
-        margin-top: 2rem;
+        margin-top: 1rem;
+
+        .form_item {
+          width: 100%;
+          @include flex_center;
+          // text-align: center;
+          padding-bottom: 1rem;
+
+          .form_item_size {
+            flex: 1;
+          }
+        }
+
+        .button {
+          @include flex_center;
+          margin-top: 1rem;
+        }
       }
     }
   }
