--- a/components/Cart/CartContent.module.scss
+++ b/components/Cart/CartContent.module.scss
@@ -4,9 +4,24 @@
   @include container;
 
   .cart {
+    // width: 100%;
     margin: 2rem 0;
     @media screen and (max-width: $xxl) {
       margin: 2rem 32px;
+    }
+
+    .summary {
+      @include flex_center(column);
+      width: 100%;
+      border: 1px solid black;
+      border-radius: 1rem;
+      box-shadow: 1px 1px 10px;
+      padding: 1rem;
+
+      @media screen and (max-width: $xl) {
+        margin-top: 1rem;
+        width: 100%;
+      }
     }
   }
 }
